# timeslots/timeslot-selection/demo/v1/model/__init__.py
@@ -1,6 +1,7 @@
 from __future__ import absolute_import
 
 from pprint import pprint
+from random import randint
 
 from .mongo_driver import collection
 from .timeslot import Timeslot, _weeksdays, _times
@@ -16,12 +17,19 @@ def insert_timeslot(timeslot: Timeslot):
 
 
 def init_db():
+    AVAILABLE_PROB = 60
     counter = 1
     if not collection.find_one():   # do not double init
         for doctor_id in range(0, 3):
             for w in _weeksdays:
                 for t in _times:
-                    timeslot = Timeslot(counter, doctor_id, w, t)
+                    # set status with probability
+                    p = randint(0, 100)
+                    if p > AVAILABLE_PROB:
+                        status = 'reserved'
+                    else:
+                        status = 'available'
+                    timeslot = Timeslot(counter, doctor_id, w, t, status=status)
                     insert_timeslot(timeslot)
                     pprint(f'Inserting...{timeslot.mongo_view()}')
                     counter += 1
